--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,14 +1,7 @@
 .card {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(250, 235, 215, 0.856);
-    border: 1px solid black;
+    position: relative;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.676);
-    width: 200px;
-    
 }
 
 .card:hover {
@@ -17,8 +10,19 @@
     box-shadow: 0 0 40px rgb(0, 0, 0);
 }
 
-.card-img{
-    padding: 20px;
-    width: inherit;
-    
+.card-img {
+    width: 100%;
+    height: 100%;
+}
+
+.img-layer {
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.img-layer:hover {
+    background-color: rgba(127, 255, 212, 0.278);
 }
