--- a/src/styles/gameboard.css
+++ b/src/styles/gameboard.css
@@ -8,6 +8,6 @@
     display: grid;
     gap: 40px;
     margin-bottom: 100px;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(5, 200px);
+    grid-template-rows: repeat(2, 300px);
 }
