--- a/src/styles/scoreboard.css
+++ b/src/styles/scoreboard.css
@@ -1,4 +1,5 @@
 .scoreboard{
+    position: relative;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -16,4 +17,16 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+}
+
+.new--best--score{
+    position: absolute;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.new--best--score h3 {
+    font-size: xx-large;
+    color: rgb(0, 255, 0);
 }
